fix: Prevent task list overlap with fixed navbars

--- a/styles/main-page-view.css
+++ b/styles/main-page-view.css
@@ -26,6 +26,7 @@
   justify-content: space-between;
   padding: 0.4rem;
   background-color: white;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.31);
 }
 
 .main-page__lists {
