--- a/styles/todos.css
+++ b/styles/todos.css
@@ -188,4 +188,5 @@ ul {
   height: 100dvh;
   width: 100%;
   background-color: rgba(128, 128, 128, 0);
+  z-index: 1;
 }
